add gorm for database handling
