# models/subscription.go
@@ -1,10 +1,17 @@
 package models
 
 type Subscription struct {
-	ID        int        `json:"id"`
-	Service   string     `json:"service_name" db:"service_name" binding:"required,min=2"`
-	Price     int        `json:"price" db:"price" binding:"required,min=1"`
-	UserID    string     `json:"user_id" db:"user_id" binding:"required,uuid"`
-	StartDate MonthYear  `json:"start_date" db:"start_date" binding:"required"`
-	EndDate   *MonthYear `json:"end_date" db:"end_date"`
+	ID        int        `json:"id" gorm:"primaryKey"`
+	Service   string     `json:"service_name" gorm:"column:service_name" binding:"required,min=2"`
+	Price     int        `json:"price" gorm:"column:price" binding:"required,min=1"`
+	UserID    string     `json:"user_id" gorm:"column:user_id" binding:"required,uuid"`
+	StartDate MonthYear  `json:"start_date" gorm:"column:start_date" binding:"required"`
+	EndDate   *MonthYear `json:"end_date" gorm:"column:end_date"`
+}
+
+type SubscriptionFilter struct {
+	UserID     string    `form:"user_id" json:"user_id"`
+	Service    string    `form:"service" json:"service"`
+	StartMonth MonthYear `form:"start_month" json:"start_month" binding:"required"`
+	EndMonth   MonthYear `form:"end_month" json:"end_month" binding:"required"`
 }
